--- a/donation/templates/donation/index.html
+++ b/donation/templates/donation/index.html
@@ -1,11 +1,27 @@
 
 {% extends 'home/base.html' %}
-    
 {% block content %}
- Hello World Donation
- <ul>
-{% for volunteer in volunteers %}
-    <li>{{ volunteer.name }}</li>
-{% endfor %}
-</ul>   
+<form  action='' method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
+</form> 
+
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Details</th>
+      </tr>
+    </thead>
+    <tbody>
+      
+      {% for donation in donations %}
+      <tr>
+        <td>{{ donation.name }}</td>
+        <td>{{ donation.details }}</td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
