--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -46,6 +46,7 @@
     {% block content %}
 
     {% endblock %}
+    <div class="fixed-bottom">
     <footer class="bg-light text-center text-lg-start">
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -53,6 +54,7 @@
       </div>
       <!-- Copyright -->
     </footer>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     
 </body>
